@@ -1,8 +1,5 @@
 {%- extends "zeit.web.core:templates/inc/asset/image_linked.tpl" -%}
 
-{% set buzzboard_image = get_image(module, teaser, variant_id='wide') %}
-{% if buzzboard_image.path not in view.buzzboard_images(buzzboard_image.path) %}
-    {% set image = buzzboard_image %}
-    {% set media_caption_additional_class = 'figcaption--hidden' %}
-    {% set href = teaser.uniqueId | create_url %}
-{% endif %}
+{% set image = get_image(module, teaser, variant_id='wide') %}
+{% set media_caption_additional_class = 'figcaption--hidden' %}
+{% set href = teaser.uniqueId | create_url %}
