@@ -4,7 +4,8 @@ Change log for zeit.web
 2.92 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-3147: Back out "Remove buzzboard image duplicates"
+  (There was a veto and the story will need to be rethought completely)
 
 
 2.91 (2016-07-07)
